--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -222,7 +222,8 @@
         "리오": "리오",
         "윌리엄": "윌리엄",
         "니키": "니키",
-        "나타폰": "나타폰"
+        "나타폰": "나타폰",
+        "얀": "Jan"
     },
     "weapons": {
         "투척": "투척", 
@@ -697,7 +698,15 @@
         "능동위장": "능동위장",
         "미스릴퀴버": "미스릴퀴버",
         "오르골": "오르골",
-        "쿤달라": "쿤달라"
+        "쿤달라": "쿤달라",
+        "히드라": "히드라",
+        "흑요석짓테": "흑요석짓테",
+        "필럼": "필럼",
+        "아스트라페": "아스트라페",
+        "사제복": " 사제복",
+        "고위사제복": "고위사제복",
+        "성법의": "성법의",
+        "창파오": "창파오"
     },
     "skill": {
         "아야": {
@@ -1446,6 +1455,28 @@
             "R": {
                 "name": "셔터 찬스",
                 "Detail": "나타폰이 타이머를 설정해 1초 뒤에 범위 내의 모든 대상을 촬영합니다.\n촬영한 대상은 2.5초간 무적 상태가 되는 대신 아무런 행동도 할 수 없습니다.촬영한 적에게는 즉시 피사체 3중첩을 부여합니다."
+            }
+        },
+        "얀": {
+            "T": {
+                "name": "열혈의 의지",
+                "Detail": "얀이 적에게 피해를 입힐 때 마다 열혈의 의지 1 스택을 얻습니다. \n열혈의 의지가 5 스택 이상 되면 다음 스킬 사용 시 스택을 소모하여 니 스트라이크, 토마호크 스핀, 위빙 스킬 쿨다운을 10/25/40% 감소시키고 스킬을 강화합니다."
+            },
+            "Q": {
+                "name": "니 스트라이크 / 리핑 니 스트라이크",
+                "Detail": "얀이 적들에게 60/80/100/120/140(+공격력의 30%) 의 피해를 입히며 1초 동안 이동 속도 60% 감소시킵니다. \n재사용하면 리핑 니 스트라이크(Q2)를 사용할 수 있습니다.\n강화 효과 : 피해를 입은 적들의 방어력을 4초 동안 30% 감소시킵니다."
+            },
+            "W": {
+                "name": "토마호크 스핀",
+                "Detail": "얀이 적들에게 80/110/140/170/200(+공격력의 40%)의 피해를 입힙니다. 바깥쪽 범위에 맞은 적들을 밀어냅니다.\n강화 효과 : 피해량이 110/140/170/200/230(+공격력의 60%)으로 증가하며 토마호크 스핀 전체 범위에 적들을 밀어내며, 밀려난 적이 벽에 부딪히면 1초 동안 기절시킵니다."
+            },
+            "E": {
+                "name": "위빙",
+                "Detail": "얀이 앞으로 돌진하고, 다음 기본공격에 20/30/40/50/60(+공격력의 35%)의 기본 공격 추가 피해를 입힙니다. \n다음 니 스트라이크(Q), 토마호크 스핀(W) 스킬 피해가 적중하면 해당 스킬 피해의 40/45/50/55/60% 만큼 얀이 회복하며, 잃은 체력에 비례하여 회복량이 최대 200% 증가합니다. 토마호크 스핀 시전 중에 사용할 수 있습니다.\n강화 효과 : 위빙(E)의 쿨다운이 40% 감소합니다."
+            },
+            "R": {
+                "name": "쿼드라곤",
+                "Detail": "얀이 6.5초 동안 유지되는 사각 링을 소환하며 매초 열혈의 의지 스택을 1 얻습니다.\n 사각 링 로프에 충돌한 적은 50/75/100(+공격력의 45%)의 피해를 입으며 이동 속도가 80% 감소되고 2초 동안 점차 회복합니다.\n 넉백으로 밀려난 적이 로프에 충돌하면 사각 링 중앙으로 밀려나며 1.3초동안 기절합니다.\n 충돌하면 로프는 없어집니다.\n경기장 범위에서 적 실험체를 처치하면 얀은 즉시 열혈의 의지 5스택을 얻고 3초 동안 이동 속도가 35% 증가합니다."
             }
         },
 
