--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -223,7 +223,8 @@
         "리오": "莉央",
         "윌리엄": "ウィリアム",
         "니키": "ニッキー",
-        "나타폰": "ナタポン"
+        "나타폰": "ナタポン",
+        "얀": "ヤン"
     },
     "weapons": {
         "투척": "投げ", 
@@ -700,7 +701,15 @@
         "능동위장": "能動偽装",
         "미스릴퀴버": "ミスリルクイーバー",
         "오르골": "オルゴール",
-        "쿤달라": "クンダーラ"
+        "쿤달라": "クンダーラ",
+        "히드라": "ヒドラ",
+        "흑요석짓테": "黒曜石十手",
+        "필럼": "ピルム",
+        "아스트라페": "アストラペー",
+        "사제복": " 司祭服",
+        "고위사제복": "高位司祭服",
+        "성법의": "聖法衣",
+        "창파오": "チャンパオ"
 
     },
     "skill": {
@@ -1446,6 +1455,28 @@
             "R": {
                 "name": "シャッターチャンス",
                 "Detail": "ナタポンがタイマーを設定し、１秒後に範囲内のすべての敵を撮影します。\n撮影した対象は2.5秒間無敵状態になる代わりに行動ができなくなります。\n撮影した敵に即時被写体スタック3を付与します。"
+            }
+        },
+        "얀": {
+            "T": {
+                "name": "熱血の意志",
+                "Detail": "ヤンが敵にダメージを与えるたびに熱血の意志スタック1を獲得します。熱血の意志がスタック5以上になると、次のスキルを使用時、スタックを消耗してニーストライク、トマホークスピン、ウィービングスキルのクールダウンが10/25/40% 減少して、スキルを強化します。"
+            },
+            "Q": {
+                "name": "ニーストライク / リッピングニーストライク",
+                "Detail": "ヤンが敵に60/80/100/120/140(+攻撃力の 30%) のダメージを与え、1秒間、移動速度を60%減少させます。再使用すると、リッピング·ニーストライク(Q2)が使用できます。\n 強化効果:ダメージを受けた敵に4秒間、防御力を30% 減少させます。\nヤンが敵に85/110/135/160/185(+攻撃力の 45%)のダメージを与え、0.85秒間空中に浮かべます。\n 強化効果:リッピング·ニーストライク(Q2)で敵にダメージを与えると、Eスキルウィービングのクールダウンを初期化します。"
+            },
+            "W": {
+                "name": "トマホークスピン",
+                "Detail": "ヤンが敵に80/110/140/170/200(+攻撃力の 40%)のダメージを与えます。外側の範囲に当たった敵を突き飛ばします。\n強化効果:ダメージ量が110/140/170/200/230(+攻撃力の 60%)に増加して、トマホークスピンの全体範囲の敵を突き飛ばし、突き飛ばされた敵が壁にぶつかると1秒間気絶させます。"
+            },
+            "E": {
+                "name": "ウィービング",
+                "Detail": "ヤンが前に突進して、次の基本攻撃に 20/30/40/50/60(+攻撃力の 35%)の基本攻撃追加ダメージを与えます。次のニーストライク(Q)、トマホークスピン(W) スキルダメージが命中すると、該当スキルダメージの 40/45/50/55/60%ほどにヤンが回復して、失った体力に比例して回復量が最大 200% 増加されます。トマホークスピンキャスト中に使用できます。\n強化効果:ウィービング(E)のクールダウンを40%減少させます。"
+            },
+            "R": {
+                "name": "クワドラゴン",
+                "Detail": "ヤンが6.5秒間維持される四角リングを召喚して、毎秒熱血の意志スタックを1 獲得します。四角のリングロープに衝突した敵は、 50/75/100(+攻撃力の 45%)のダメージを受け、 2秒間移動速度が80%減少されます。ノックバックで突き飛ばされた敵がロープに衝突すると、四角リングの中央に突き飛ばされて <strong>1.3秒</strong>間気絶します。衝突するとロープは消えます。\n競技場の範囲内で敵実験体を処置すると、ヤンは直ちに熱血の意志スタック5を獲得し、3秒間移動速度が35% 増加します。"
             }
         },
 
