신캐 이바 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -224,7 +224,8 @@
         "윌리엄": "ウィリアム",
         "니키": "ニッキー",
         "나타폰": "ナタポン",
-        "얀": "ヤン"
+        "얀": "ヤン",
+        "이바": "エヴァ"
     },
     "weapons": {
         "투척": "投げ", 
@@ -709,7 +710,9 @@
         "사제복": " 司祭服",
         "고위사제복": "高位司祭服",
         "성법의": "聖法衣",
-        "창파오": "チャンパオ"
+        "창파오": "チャンパオ",
+        "쌍둥이검": "双子の剣",
+        "간장과막야": "干將·莫耶"
 
     },
     "skill": {
@@ -1477,6 +1480,28 @@
             "R": {
                 "name": "クワドラゴン",
                 "Detail": "ヤンが6.5秒間維持される四角リングを召喚して、毎秒熱血の意志スタックを1 獲得します。四角のリングロープに衝突した敵は、 50/75/100(+攻撃力の 45%)のダメージを受け、 2秒間移動速度が80%減少されます。ノックバックで突き飛ばされた敵がロープに衝突すると、四角リングの中央に突き飛ばされて <strong>1.3秒</strong>間気絶します。衝突するとロープは消えます。\n競技場の範囲内で敵実験体を処置すると、ヤンは直ちに熱血の意志スタック5を獲得し、3秒間移動速度が35% 増加します。"
+            }
+        },
+        "이바": {
+            "T": {
+                "name": "テレキネシス",
+                "Detail": "テレキネシス: エヴァは6レベルからアイテムボックス、釣り、採集、復活、航空補給などを遠距離から操作できます。戦闘中にはアイテムボックスを遠距離から操作することができません。\nVFライト : エヴァは基本攻撃ダメージを受けたりスキルを的中させると、対象の位置にVFライトを発射して、的中した敵に30/60/90(+攻撃力の 35%)のダメージを与え、2秒間移動速度を 20/25/30%遅くします。VFライトに敵の実験体が的中すると、VFライトのクールダウンが30％減少します。\n1秒ごとにバイタルフォース1を獲得して実験体を処理すると30、アシストに関与するとバイタルフォース15を獲得します。VFライトが当たるとバイタルフォース5を獲得します。\nバイタルフォースはVF放出(R)使用時に必要です。"
+            },
+            "Q": {
+                "name": "光のトライアド",
+                "Detail": "エヴァが貫通する光の球体を発射して、経路上の敵に20/40/60/80/100(+攻撃力の 25%)のダメージを与えます。球体は射程距離の端まで飛ぶか、スキルを再使用すると爆発して範囲内の敵に75/115/145/185/225(+攻撃力の 55%)のダメージを与えます。\nスキルを的中させるとバイタルフォース10を獲得します。"
+            },
+            "W": {
+                "name": "位相の渦",
+                "Detail": "エヴァが指定した地点に2秒間維持できる位相の渦を生成して範囲内の敵に50/90/130/170/210(+攻撃力の 50%)のダメージを与えます。範囲内の敵はエヴァのスキル攻撃に10/12/14/16/18%の追加ダメージを受けて移動速度が40% 減少します。\n位相の渦の持続時間が終了すると、範囲内の敵に50/90/130/170/210(+攻撃力の 50%)のダメージを与え、中心部の敵を1秒間空中に浮かせます。\nスキルを的中させるとバイタルフォース10を獲得します。"
+            },
+            "E": {
+                "name": "紫水晶の波",
+                "Detail": "エヴァが指定した方向に素早く移動し、移動中に阻止不可状態になります。\n移動後3秒間地形に関係なく視界を確保できる状態になり、持続時間内に次の基本攻撃に的中した対象は0.1秒間沈黙状態になります。基本攻撃をすると視界効果は直ちに消えます。\n基本攻撃に的中した対象がエヴァから妨害効果を受けていた場合、50/90/130/170/210(+攻撃力の 50%)の持続ダメージを毎秒3回まで受けて視界を提供します。"
+            },
+            "R": {
+                "name": "VF放出",
+                "Detail": "エヴァがキャストしながら、指定した方向にVFを放出して範囲内の敵に 0.1秒ごとに固定ダメージ20/30/40を与え、スタックを付与します。5スタックになった対象は40/70/100(+攻撃力の 30%)のダメージを受け、スタックが初期化されます。\nVF放出を使用するには最小15のバイタルフォースが必要であり、スキル使用中には 0.1秒ごとに4を消費します。\nスキル使用中に他のスキルを使用してキャンセルでき、紫水晶の波スキルを使用するとクールダウンが初期化されます。"
             }
         },
 
