--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -223,7 +223,8 @@
         "윌리엄": "윌리엄",
         "니키": "니키",
         "나타폰": "나타폰",
-        "얀": "Jan"
+        "얀": "얀",
+        "이바": "이바"
     },
     "weapons": {
         "투척": "투척", 
@@ -706,7 +707,9 @@
         "사제복": " 사제복",
         "고위사제복": "고위사제복",
         "성법의": "성법의",
-        "창파오": "창파오"
+        "창파오": "창파오",
+        "쌍둥이검": "쌍둥이검",
+        "간장과막야": "간장과막야"
     },
     "skill": {
         "아야": {
@@ -1477,6 +1480,28 @@
             "R": {
                 "name": "쿼드라곤",
                 "Detail": "얀이 6.5초 동안 유지되는 사각 링을 소환하며 매초 열혈의 의지 스택을 1 얻습니다.\n 사각 링 로프에 충돌한 적은 50/75/100(+공격력의 45%)의 피해를 입으며 이동 속도가 80% 감소되고 2초 동안 점차 회복합니다.\n 넉백으로 밀려난 적이 로프에 충돌하면 사각 링 중앙으로 밀려나며 1.3초동안 기절합니다.\n 충돌하면 로프는 없어집니다.\n경기장 범위에서 적 실험체를 처치하면 얀은 즉시 열혈의 의지 5스택을 얻고 3초 동안 이동 속도가 35% 증가합니다."
+            }
+        },
+        "이바": {
+            "T": {
+                "name": "텔레키네시스",
+                "Detail": "텔레키네시스 : 이바는 6레벨 이후부터 아이템 박스, 낚시, 채집, 부활, 항공 보급 상자 등을 원거리에서 조작할 수 있습니다.\n 전투 중에는 아이템 박스를 원거리에서 조작할 수 없습니다.\nVF 라이트 : 이바는 기본 공격 피해를 받거나 스킬을 적중시키면 대상의 위치로 VF 라이트를 발사하여, 적중한 적들에게 30/60/90(+공격력의 35%)의 피해를 입히고 2초 동안 이동속도를 20/25/30% 느려지게 합니다. VF 라이트에 적 실험체가 적중되면 텔레키네시스의 쿨다운이 30% 감소됩니다.\n1초마다 1의 바이탈 포스를 획득하며 실험체를 처치하면 30, 어시스트에 관여하면 15의 바이탈 포스를 획득합니다.\n VF 라이트가 적중되면, 바이탈 포스를 5 획득합니다.\n바이탈 포스는 VF 방출(R)을 사용할 때 필요합니다."
+            },
+            "Q": {
+                "name": "빛의 트라이어드",
+                "Detail": "이바가 관통하는 빛의 구체를 발사하여 경로상의 적들에게 20/40/60/80/100(+공격력의 25%)의 피해를 입힙니다.\n 구체는 사거리 끝까지 날아가거나 스킬을 다시 사용하면 폭발하며 범위 안의 적들에게 75/115/145/185/225(+공격력의 55%)의 피해를 입힙니다.\n스킬을 적중시키면 바이탈 포스를 10 획득합니다."
+            },
+            "W": {
+                "name": "위상의 소용돌이",
+                "Detail": "이바가 지정한 지점에 2초 동안 유지되는 위상의 소용돌이를 생성하여 범위 안의 적들에게 50/90/130/170/210(+공격력의 50%)의 피해를 입힙니다. 범위 안에 머무르는 적들은 이바의 스킬에 10/12/14/16/18%의 추가 피해를 받고, 이동 속도가 40% 감소합니다.\n위상의 소용돌이 지속 시간이 종료될 때, 범위 안의 적들에게 50/90/130/170/210(+공격력의 50%)의 피해를 입히고 중심부의 적들을 1초 동안 공중에 띄웁니다.\n스킬을 적중시키면 바이탈 포스를 10 획득합니다."
+            },
+            "E": {
+                "name": "자수정의 물결",
+                "Detail": "이바가 지정한 방향으로 빠르게 이동하며 이동하는 동안 저지 불가 상태가 됩니다.\n이동 후 3초 동안 지형과 관계없이 시야를 확보할 수 있는 상태가 되며, 지속 시간 안에 다음 기본 공격에 적중한 대상은 0.1초 동안 침묵 상태가 됩니다. 기본 공격을 하면 시야 효과는 즉시 사라집니다.\n기본 공격에 적중한 대상이 이바에게 이동 방해 효과를 받고 있었다면, 총 50/90/130/170/210(+공격력의 50%)의 지속 피해를 3회에 걸쳐서 매초 받으며 시야를 제공합니다."
+            },
+            "R": {
+                "name": "VF 방출",
+                "Detail": "이바가 정신 집중을 하며 지정한 방향으로 VF를 방출하여 범위 안의 적들에게 0.1초마다 20/30/40의 고정 피해를 입히고, 스택을 부여합니다. 5스택이 된 대상은 40/70/100(+공격력의 30%)의 피해를 받고, 스택이 초기화됩니다.\nVF 방출을 사용하기 위해서는 최소 15의 바이탈 포스가 필요하며, 스킬을 사용하는 동안 0.1초마다 4를 소모합니다.\n스킬을 사용하는 도중에 다른 스킬을 사용하여 취소할 수 있으며, 자수정의 물결 스킬을 사용하면 쿨다운이 초기화됩니다."
             }
         },
 
