--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -224,7 +224,8 @@
         "윌리엄": "William",
         "니키": "Nicky",
         "나타폰": "Nathapon",
-        "얀": "Jan"
+        "얀": "Jan",
+        "이바": "Eva"
     },
     "weapons": {
         "투척": "Arremessãble", 
@@ -711,7 +712,9 @@
         "사제복": " Deacon Robes",
         "고위사제복": "Cardinal Robes",
         "성법의": "Holy Orders",
-        "창파오": "Chang Pao"
+        "창파오": "Chang Pao",
+        "쌍둥이검": " Pocket Aces",
+        "간장과막야": "Spring and Autumn"
 
     },
     "skill": {
@@ -1484,6 +1487,28 @@
             "R": {
                 "name": "The Tetragon",
                 "Detail": "Jan summons a square ring for 6.5 seconds, granting him 1 stack of Unyielding every second.\n Enemies that touch the ropes are slowed by 80% for 2 seconds and take 50/75/100(+Attack Power 45%) damage. \nEnemies that are knocked back into the ropes are then knocked back towards the center of the ring and stunned for 1.3 seconds. Ropes disappear upon contact.\nKilling a player inside the ring grants 5 stacks of Unyielding and increases Jan’s movement speed by 35% for 3 seconds."
+            }
+        },
+        "이바": {
+            "T": {
+                "name": "Telekinesis",
+                "Detail": "Telekinesis: Starting at level 6, Eva can open boxes and air supplies, fish, collect, and recover downed allies from range. She can not interact with boxes from range during combat.\nVF Bead: When Eva lands a skill or is hit by a basic attack, Eva expels a bead of concentrated VF energy towards the enemy, dealing 30/60/90(+Attack Power 35%) damage and slowing targets hit by 20/25/30% for 2 seconds. Landing a VF Bead on an enemy reduces its cooldown by 30% and grants 5 Vital Force. Eva gains 1 Vital Force every 1 second, 30 per kill, and 15 per assist. \nVital Force is required when using VF Eruption (R). "
+            },
+            "Q": {
+                "name": "Light Triad",
+                "Detail": "Eva casts an orb of light in the targeted direction, dealing 20/40/60/80/100(+Attack Power 25%) damage to enemies hit. When the orb reaches maximum range or the skill is reactivated, it explodes, dealing 75/115/145/185/225(+Attack Power 55%) damage. \nHitting an enemy with Light Triad grants 10 Vital Force. "
+            },
+            "W": {
+                "name": "Phase Vortex",
+                "Detail": "Eva forms a Phase Vortex in the targeted location, dealing 50/90/130/170/210(+Attack Power 50%) damage. Enemies inside the vortex take 10/12/14/16/18% extra damage from Eva’s skills and are slowed by 40%. \nThe vortex collapses after 2 seconds, dealing 50/90/130/170/210(+Attack Power 50%) damage and launching enemies in the middle airborne for 1 second. \nHitting an enemy with Phase Vortex grants 10 Vital Force. "
+            },
+            "E": {
+                "name": "Amethyst Flow",
+                "Detail": "Eva becomes unstoppable and dashes in the targeted direction, granting her vision of all enemies near her for 3 seconds. Her next basic attack silences her target for 0.1 seconds. Basic attacks immediately remove any extra vision granted from Amethyst Flow. \n If Eva lands a basic attack on a target that is affected by one of her crowd control effects, it applies Amethyst Duress, dealing a total of 50/90/130/170/210 over 3 seconds and granting Eva vision of them. "
+            },
+            "R": {
+                "name": "VF Eruption",
+                "Detail": "Eva releases her stored VF, dealing 20/30/40 true damage and applying a stack of VF Dissonance every 0.1 seconds to enemies in range. Upon reaching 5 stacks, Eva consumes the stacks, dealing 40/70/100(+Attack Power 30%) damage. \n A minimum of 15 Vital Force is required to use VF Eruption. VF Eruption consumes 4 Vital Force every 0.1 seconds while channeling. \nUsing Amethyst Flow while channeling VF Eruption resets the cooldown of VF Eruption. "
             }
         },
 
