신캐 다니엘 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -225,7 +225,8 @@
         "니키": "ニッキー",
         "나타폰": "ナタポン",
         "얀": "ヤン",
-        "이바": "エヴァ"
+        "이바": "エヴァ",
+        "다니엘": "ダニエル"
     },
     "weapons": {
         "투척": "投げ", 
@@ -712,7 +713,11 @@
         "성법의": "聖法衣",
         "창파오": "チャンパオ",
         "쌍둥이검": "双子の剣",
-        "간장과막야": "干將·莫耶"
+        "간장과막야": "干將·莫耶",
+        "마도서": "魔導書",
+        "빛의증표": "光の証票",
+        "데린저": "デリンジャー",
+        "스탬피드": "スタンピード"
 
     },
     "skill": {
@@ -1502,6 +1507,28 @@
             "R": {
                 "name": "VF放出",
                 "Detail": "エヴァがキャストしながら、指定した方向にVFを放出して範囲内の敵に 0.1秒ごとに固定ダメージ20/30/40を与え、スタックを付与します。5スタックになった対象は40/70/100(+攻撃力の 30%)のダメージを受け、スタックが初期化されます。\nVF放出を使用するには最小15のバイタルフォースが必要であり、スキル使用中には 0.1秒ごとに4を消費します。\nスキル使用中に他のスキルを使用してキャンセルでき、紫水晶の波スキルを使用するとクールダウンが初期化されます。"
+            }
+        },
+        "다니엘": {
+            "T": {
+                "name": "孤独な芸術家",
+                "Detail": "ダニエルは夜になると孤独な芸術家になり、夜の視界減少量が20/24/28%減り、非戦闘中の移動速度が5/10/15%増加します。また、体力が60%以下では攻撃力が5/10/15増加します。"
+            },
+            "Q": {
+                "name": "シャドーシザース",
+                "Detail": "ダニエルが目標の地点にハサミを召喚し、敵に50/70/90/110/130(+攻撃力の35%)のダメージを与え、移動速度を1.5秒間35%減少させます。敵にハサミ的中時、3秒間ダニエルの次3回の基本攻撃速度が40/80/120/160/200% 上昇します。\nハサミの中央に的中した敵は85/105/125/145/165(+攻撃力の50%)の強化されたダメージを受けシャドーシザース、シャドーグライドクールダウンを35%減少させます。"
+            },
+            "W": {
+                "name": "インスピレーション",
+                "Detail": "ダニエルが指定した敵の実験体にインスピレーション刻印を付与します。\n ダニエルは刻印が付与された敵の周辺2mの視界を獲得して、 2.5秒間移動速度が30%減少します。\n刻印を付与された敵はダニエルに攻撃されるまで視界が4mに減少され、7秒間ダニエルが与えたダメージ量の12/14/16/18/20%保存します。\nインスピレーション刻印が7秒間維持された敵はインスピレーションの対象となります。ダニエルがインスピレーションの対象を 4秒内に攻撃すると、刻印が爆発して保存されたダメージ量と20/30/40/50/60(+攻撃力の 30%)のダメージを与え、 1秒間束縛を付与します。刻印爆発で敵処置時、インスピレーションのクールダウンが初期化されます。\nダニエルと敵の距離が9m以上離れると刻印は消えます。 "
+            },
+            "E": {
+                "name": "シャドーグライド",
+                "Detail": "ダニエルが目標の地点に素早く突進して、3秒間シャドー突進状態になります。シャドー突進状態で攻撃射程距離が2.5mで固定され、基本攻撃すると敵の向かい側に瞬間移動して敵に35/55/75/95/115(+攻撃力の 25%)のダメージを追加で与えます。"
+            },
+            "R": {
+                "name": "傑作",
+                "Detail": "ダニエルがインスピレーションの対象にかかっていたり、束縛状態の敵を指定してシャドーの中に入ることができます。シャドーに入る時、敵に0.5秒の沈黙を付与します。敵のシャドーの中で最大2秒間維持でき、一定間隔で60/90/120(+攻撃力の 35%)の固有ダメージを最大4回まで与えます。\n一定時間が過ぎたり、もう一度スキルを使用すると敵のシャドーから抜け出し、敵の失った体力に比例して60/120/180(+攻撃力の 50%)~120/180/360(+攻撃力の 100%)のダメージを与えます。"
             }
         },
 
