--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -224,7 +224,8 @@
         "니키": "니키",
         "나타폰": "나타폰",
         "얀": "얀",
-        "이바": "이바"
+        "이바": "이바",
+        "다니엘": "다니엘"
     },
     "weapons": {
         "투척": "투척", 
@@ -709,7 +710,11 @@
         "성법의": "성법의",
         "창파오": "창파오",
         "쌍둥이검": "쌍둥이검",
-        "간장과막야": "간장과막야"
+        "간장과막야": "간장과막야",
+        "마도서": "마도서",
+        "빛의증표": "빛의증표",
+        "데린저": "데린저",
+        "스탬피드": "스탬피드"
     },
     "skill": {
         "아야": {
@@ -1502,6 +1507,28 @@
             "R": {
                 "name": "VF 방출",
                 "Detail": "이바가 정신 집중을 하며 지정한 방향으로 VF를 방출하여 범위 안의 적들에게 0.1초마다 20/30/40의 고정 피해를 입히고, 스택을 부여합니다. 5스택이 된 대상은 40/70/100(+공격력의 30%)의 피해를 받고, 스택이 초기화됩니다.\nVF 방출을 사용하기 위해서는 최소 15의 바이탈 포스가 필요하며, 스킬을 사용하는 동안 0.1초마다 4를 소모합니다.\n스킬을 사용하는 도중에 다른 스킬을 사용하여 취소할 수 있으며, 자수정의 물결 스킬을 사용하면 쿨다운이 초기화됩니다."
+            }
+        },
+        "다니엘": {
+            "T": {
+                "name": "고독한 예술가",
+                "Detail": "다니엘은 밤이 되면 고독한 예술가가 되어 밤 시야 감소량이 20/24/28% 줄어들고, 비전투 중 이동 속도가 5/10/15% 증가합니다. 또한 체력 60% 이하에서는 공격력이 5/10/15 증가합니다."
+            },
+            "Q": {
+                "name": "그림자 가위",
+                "Detail": "다니엘이 목표 지점에 가위를 불러와 적에게 50/70/90/110/130(+공격력의 35%)의 피해를 주고 이동속도를 1.5초 동안 35% 감소시킵니다. 적에게 가위 적중 시 3초 간 다니엘의 다음 세 번의 공격 속도가 40/80/120/160/200% 상승합니다.\n가위 중앙에 적중한 적은 85/105/125/145/165(+공격력의 50%)의 강화된 피해를 받으며, 다니엘의 그림자 가위, 그림자 이동 쿨다운을 35% 감소 시킵니다."
+            },
+            "W": {
+                "name": "영감",
+                "Detail": "다니엘이 지정한 적 실험체에게 영감 표식을 부여합니다.\n다니엘은 표식이 부여된 적 주변 2m의 시야를 얻으며, 2.5초 동안 이동속도가 30% 감소합니다.\n표식이 부여된 적은 다니엘에게 공격 받을 때까지 시야가 4m로 감소되며, 7초에 걸쳐 다니엘이 준 피해량의 12/14/16/18/20% 축적합니다.\n영감 표식이 7초 간 유지된 적은 영감의 대상이 됩니다. 다니엘이 영감의 대상을 4초 내에 공격하면 표식이 폭발하여 축적된 피해량과 20/30/40/50/60(+공격력의 30%)의 피해를 입히고, 1초 동안 속박을 부여합니다. 표식 폭발로 적 처치 시 영감의 쿨다운이 초기화 됩니다.\n다니엘과 대상의 거리가 9m 이상 떨어지면 표식은 사라지게 됩니다."
+            },
+            "E": {
+                "name": "그림자 이동",
+                "Detail": "다니엘이 목표 지점으로 빠르게 돌진하며 3초간 그림자 돌진 상태가 됩니다. 그림자 돌진 상태에서 공격 사거리가 2.5m로 고정되며, 기본 공격 시 적의 건너편 방향으로 순간 이동하며 적에게 35/55/75/95/115(+공격력의 25%)의 피해를 추가로 입힙니다."
+            },
+            "R": {
+                "name": "걸작",
+                "Detail": "다니엘이 영감의 대상에 걸려있거나 속박 상태의 적 실험체를 지정해 그림자 속으로 들어갑니다. 그림자로 들어갈 때 적에게 0.5초의 침묵을 부여하고, 적의 그림자 속에서 최대 2초 동안 머무를 수 있으며, 짧은 간격으로 60/90/120(+공격력의 35%)의 고유 피해를 최대 4번 줍니다.\n일정 시간이 지나거나 다시 한번 스킬을 사용하면 적의 그림자에서 빠져나오며, 적의 잃은 체력에 비례해 60/120/180(+공격력의 50%)~120/180/360(+공격력의 100%)의 피해를 줍니다."
             }
         },
 
