신캐 제니 추가

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -225,7 +225,8 @@
         "나타폰": "나타폰",
         "얀": "얀",
         "이바": "이바",
-        "다니엘": "다니엘"
+        "다니엘": "다니엘",
+        "제니": "제니"
     },
     "weapons": {
         "투척": "투척", 
@@ -714,7 +715,13 @@
         "마도서": "마도서",
         "빛의증표": "빛의증표",
         "데린저": "데린저",
-        "스탬피드": "스탬피드"
+        "스탬피드": "스탬피드",
+        "자마다르": "자마다르",
+        "카라페이스카타르": "카라페이스카타르",
+        "마하라자": "마하라자",
+        "바브드블로섬": "바브드블로섬",
+        "스마트밴드": "스마트밴드",
+        "아이테르깃털": "아이테르깃털"
     },
     "skill": {
         "아야": {
@@ -1531,6 +1538,29 @@
                 "Detail": "다니엘이 영감의 대상에 걸려있거나 속박 상태의 적 실험체를 지정해 그림자 속으로 들어갑니다. 그림자로 들어갈 때 적에게 0.5초의 침묵을 부여하고, 적의 그림자 속에서 최대 2초 동안 머무를 수 있으며, 짧은 간격으로 60/90/120(+공격력의 35%)의 고유 피해를 최대 4번 줍니다.\n일정 시간이 지나거나 다시 한번 스킬을 사용하면 적의 그림자에서 빠져나오며, 적의 잃은 체력에 비례해 60/120/180(+공격력의 50%)~120/180/360(+공격력의 100%)의 피해를 줍니다."
             }
         },
+        "제니": {
+            "T": {
+                "name": "죽음의 연기",
+                "Detail": "연기력: 제니는 기본 공격을 하면 연기력이 5 충전되며, 페르소나(E)의 쿨다운이 1초 감소합니다.\n페르소나로 배역을 전환할 때마다 추가 효과를 얻습니다.\n레드 와인으로 전환: 4초 동안 공격 속도가 20% 증가합니다.\n블랙 티로 전환: 3초 동안 이동 속도가 8/10/12%증가합니다.\n죽음의 연기: 연기력이 50이상일 때, 제니의 HP가 0이 되면 4초 동안 죽음의 연기 상태가 되어 은신, 무적, 타겟 지정 불가 상태가 되지만 이동 속도가 크게 느려집니다.\n 죽음의 연기 상태가 종료되면 100 + {최대 HP의 10/25/40%} 를 회복(회복량은 연기력 비례)하며 부활하고, 주변 적들에게 20/50/80(+대상 잃은 체력의 4%) 스킬 피해를 줍니다. 연기 게이지는 비전투 시 초당 7씩 감소합니다."
+            },
+            "Q": {
+                "name": "스포트라이트",
+                "Detail": "제니가 대상 지점을 스포트라이트로 3번 비추고 각각 20/30/40/50/60(+공격력의 20%) 스킬 피해를 줍니다.\n적을 적중시키면 제니의 연기력이 10 충전되며, 연기력이 50 이상일 때 제니 자신을 비추면 추가 효과를 얻습니다.\n레드 와인: 4초 동안 공격 속도가 12/14/16/18/20% 증가합니다. (최대 3 중첩)\n블랙 티: 3초 동안 이동 속도가 2/3/4/5/6% 증가합니다. (최대 3 중첩)"
+            },
+            "W": {
+                "name": "레드 카펫",
+                "Detail": "제니가 지정한 방향으로 레드 카펫을 설치하여, 적에게 50/85/120/155/190 + (공격력의 25%)의 스킬 피해를 주고, 1초 동안 이동속도를 30% 감소시킵니다.\n다시 사용하면, 레드 카펫 위의 적에게 50/85/120/155/190(+공격력의 25%)의 스킬 피해를 주고, 설치했을 때 제니의 배역에 따라 추가 효과를 줍니다.\n레드 와인: 카펫 위의 적을 당겨옵니다.\n블랙 티: 카펫 위의 적을 밀어냅니다."
+            },
+            "E": {
+                "name": "페르소나",
+                "Detail": "지속 효과: 제니의 4번째 기본 공격은 10/20/30/40/50 (+스킬 증폭 * 1.5)의 추가 스킬 피해를 줍니다.\n사용 효과: 제니가 짧은 거리를 이동하며 배역을 바꾸고, 지속 효과를 활성화합니다.\n설치했던 스포트라이트와 레드 카펫의 효과는 달라지지 않습니다."
+            },
+            "R": {
+                "name": "시상식의 여왕",
+                "Detail": "제자리에 시상식 무대를 설치하여 범위 내 적들의 이동 속도를 40/50/60% 감소시키고, 제니의 페르소나(E)의 쿨다운을 초기화합니다.\n무대는 2초 후에 사라지며 범위 내의 적에게 100/200/300(+공격력의 20 25%)의 스킬 피해를 주고 대상을 1초 동안 매혹 상태에 빠지게 합니다."
+            }
+        },
+
 
 
         
