--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -226,7 +226,8 @@
         "나타폰": "ナタポン",
         "얀": "ヤン",
         "이바": "エヴァ",
-        "다니엘": "ダニエル"
+        "다니엘": "ダニエル",
+        "제니": "ジェニー"
     },
     "weapons": {
         "투척": "投げ", 
@@ -717,7 +718,13 @@
         "마도서": "魔導書",
         "빛의증표": "光の証票",
         "데린저": "デリンジャー",
-        "스탬피드": "スタンピード"
+        "스탬피드": "スタンピード",
+        "자마다르": "ジャマダハル",
+        "카라페이스카타르": "カラペースカタル",
+        "마하라자": "マハラジャ",
+        "바브드블로섬": "バーブドブロッサム",
+        "스마트밴드": "スマートバンド",
+        "아이테르깃털": "アイテールの羽"
 
     },
     "skill": {
@@ -1529,6 +1536,28 @@
             "R": {
                 "name": "傑作",
                 "Detail": "ダニエルがインスピレーションの対象にかかっていたり、束縛状態の敵を指定してシャドーの中に入ることができます。シャドーに入る時、敵に0.5秒の沈黙を付与します。敵のシャドーの中で最大2秒間維持でき、一定間隔で60/90/120(+攻撃力の 35%)の固有ダメージを最大4回まで与えます。\n一定時間が過ぎたり、もう一度スキルを使用すると敵のシャドーから抜け出し、敵の失った体力に比例して60/120/180(+攻撃力の 50%)~120/180/360(+攻撃力の 100%)のダメージを与えます。"
+            }
+        },
+        "제니": {
+            "T": {
+                "name": "死の演技",
+                "Detail": "演技力：ジェニーは基本攻撃をすると演技力5チャージされ、ペルソナ(E)のクールダウンが1秒減少します。ペルソナスキルで配役を切り替えるたびに追加効果を獲得します。\n赤ワイン：4秒間攻撃速度が20%増加します。\nブラックティー：3秒間移動速度が 8/10/12%増加します。\n 死の演技:演技力が50以上の時、ジェニーの体力が0になると4秒間死の演技状態になり、隠密、無敵、ターゲット指定不可の状態になりますが、移動速度が大きく減少します。\n死の演技状態が終了すると、100 + {最大体力の 10/25/40%} を回復(回復量は演技力に比例)して復活し、周りの敵に20/50/80(+対象が失った体力の 4%)のスキルダメージを与えます。\n演技ゲージは非戦闘時毎秒7ずつ減少します。"
+            },
+            "Q": {
+                "name": "スポットライト",
+                "Detail": "ジェニーが対象地点をスポットライトで3回照らして、それぞれ20/30/40/50/60(+攻撃力の 20%) のスキルダメージを与えます。\n敵に的中すると、ジェニーの演技力が10チャージされ、演技力が 50以上の時にジェニー自身を照らすと、追加効果を獲得します。\n赤ワイン:4秒間攻撃速度が12/14/16/18/20%増加します。(最大３重畳)\nブラックティー:3秒間移動速度が 2/3/4/5/6%増加します。(最大３重畳)"
+            },
+            "W": {
+                "name": "レッドカーペット",
+                "Detail": "持続効果：ジェニーの4番目の基本攻撃は10/20/30/40/50 (+スキル増幅 * 1.5)の追加スキルダメージを与えます。\n使用効果：ジェニーが短い距離を移動して配役を切り替え、持続効果を活性化します。\n設置されていたスポットライトとレッドカーペットの効果は変わりません。"
+            },
+            "E": {
+                "name": "ペルソナ",
+                "Detail": "持続効果：ジェニーの4番目の基本攻撃は10/20/30/40/50 (+スキル増幅 * 1.5)の追加スキルダメージを与えます。\n使用効果：ジェニーが短い距離を移動して配役を切り替え、持続効果を活性化します。\n設置されていたスポットライトとレッドカーペットの効果は変わりません。"
+            },
+            "R": {
+                "name": "アカデミー女王",
+                "Detail": "ジェニーの周りに授賞式ステージを設置して、範囲内の敵の移動速度を40/50/60% 減少させ、ペルソナ(E)のクールダウンが初期化されます。\nステージは2秒後に消え、範囲内の敵に100/200/300(+攻撃力の 20 25%)のスキルダメージを与え、１秒間敵を魅惑させます。"
             }
         },
 
