신캐 카밀로 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -227,7 +227,8 @@
         "얀": "ヤン",
         "이바": "エヴァ",
         "다니엘": "ダニエル",
-        "제니": "ジェニー"
+        "제니": "ジェニー",
+        "카밀로": "カミロ"
     },
     "weapons": {
         "투척": "投げ", 
@@ -724,7 +725,10 @@
         "마하라자": "マハラジャ",
         "바브드블로섬": "バーブドブロッサム",
         "스마트밴드": "スマートバンド",
-        "아이테르깃털": "アイテールの羽"
+        "아이테르깃털": "アイテールの羽",
+        "조잡한쌍검": "粗末な双剣",
+        "아수라": "阿修羅",
+        "다이아뎀": "ダイアデム"
 
     },
     "skill": {
@@ -1560,6 +1564,29 @@
                 "Detail": "ジェニーの周りに授賞式ステージを設置して、範囲内の敵の移動速度を40/50/60% 減少させ、ペルソナ(E)のクールダウンが初期化されます。\nステージは2秒後に消え、範囲内の敵に100/200/300(+攻撃力の 20 25%)のスキルダメージを与え、１秒間敵を魅惑させます。"
             }
         },
+        "카밀로": {
+            "T": {
+                "name": "オーレ",
+                "Detail": "カミロがダメージを与える最初の対象のスタミナを 20/30/40(+攻撃力の 15%) 減少させ、カミロに 3秒間 シールドが生成され、50/100/150(+攻撃力の 35%)のダメージを防ぎ、攻撃速度が10/20/30%増加します。\n基本攻撃とスキルで交互にダメージを与えると、オーレとシエレのクールダウンが2秒 減少します。"
+            },
+            "Q": {
+                "name": "ブエルタ",
+                "Detail": "カミロが前方を切り裂いて 30/60/90/120/150(+攻撃力の 100%) の基本攻撃ダメージを与えます。\n外郭から的中すると6秒間1回重畳され、カミロの移動速度が2秒間3/6/9/12/15%増加します。\n2回重畳すると円形に2回回転しながら、周りに30/60/90/120/150(+攻撃力の 100%), 40/80/120/160/200(+攻撃力の 125%)の基本攻撃ダメージを与え、周りの敵をカミロ側に引き寄せて、カミロの体力を40/80/120/160/200(+攻撃力の 50%)回復させます。\nブエルタはカミロの基本攻撃速度を除いた攻撃速度に比例してクールダウンが最大 3.5秒 減少します。"
+            },
+            "W": {
+                "name": "シエレ",
+                "Detail": "カミロが回転しながら前に突進して 10/20/30/40/50(+攻撃力の 35%)の基本攻撃ダメージを最大4回与えます。"
+            },
+            "E": {
+                "name": "アルコンパス",
+                "Detail": "カミロが指定した対象に素早く突進して  30/45/60/75/90(+ 攻撃力の 20%)のスキルダメージを与えて、5秒 間ワンステップを付与します。\nワンステップが付与された対象にスキルを再使用すると、対象に素早く移動して 30/45/60/75/90(+ 攻撃力の 20%)のスキルダメージを与え、対象を後ろに押し出した後に距離を広げながら8/7/6/5/4秒間ツーステップを付与します。\nツーステップが付与された対象にはアルコムパスが使用できません。"
+            },
+            "R": {
+                "name": "ドゥエンデ",
+                "Detail": "カミロが踊りながら前方に移動した後、0.23 後戻ってきて移動中にぶつかった対象にエンべレソを最大2スタックを付与します。\n戻ってきた時、対象に付与されたエンべレソのスタックによって100/150/200(+ 攻撃力の 50%) ~ 200/300/400(+ 攻撃力の 100%)のスキルダメージを与え、移動速度が  0.85秒間80%増加します。\nダメージを与えるとエンべレソ2スタックの対象を1.5秒間気絶させ、カミロの体力は 100/150/200回復して回復量は与えられた全体のエンべレソの数に比例して(最大5スタック)20/35/50%増加します。\n10秒以内に最大2回まで再使用後のクールダウンが適用されます。\nカミロが踊りながら移動している間は阻止不可状態となり、受けるダメージ量が20/25/30%減少します。"
+            }
+        },
+
 
         
         "단검": {
