--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -226,7 +226,8 @@
         "얀": "얀",
         "이바": "이바",
         "다니엘": "다니엘",
-        "제니": "제니"
+        "제니": "제니",
+        "카밀로": "카밀로"
     },
     "weapons": {
         "투척": "투척", 
@@ -721,7 +722,10 @@
         "마하라자": "마하라자",
         "바브드블로섬": "바브드블로섬",
         "스마트밴드": "스마트밴드",
-        "아이테르깃털": "아이테르깃털"
+        "아이테르깃털": "아이테르깃털",
+        "조잡한쌍검": "조잡한쌍검",
+        "아수라": "아수라",
+        "다이아뎀": "다이아뎀"
     },
     "skill": {
         "아야": {
@@ -1558,6 +1562,28 @@
             "R": {
                 "name": "시상식의 여왕",
                 "Detail": "제자리에 시상식 무대를 설치하여 범위 내 적들의 이동 속도를 40/50/60% 감소시키고, 제니의 페르소나(E)의 쿨다운을 초기화합니다.\n무대는 2초 후에 사라지며 범위 내의 적에게 100/200/300(+공격력의 20 25%)의 스킬 피해를 주고 대상을 1초 동안 매혹 상태에 빠지게 합니다."
+            }
+        },
+        "카밀로": {
+            "T": {
+                "name": "올레",
+                "Detail": "카밀로가 피해를 입히는 첫 대상의 스태미너를 20/30/40(+공격력의 15%)감소시키고, 카밀로에게 3초 동안 보호막이 생성되어 50/100/150(+공격력의 35%)의 피해를 막아주며 공격속도가 10/20/30%상승합니다.\n 기본 공격 및 스킬로 번갈아서 피해를 입히면 올레와 씨에레의 쿨다운이 2초 감소합니다."
+            },
+            "Q": {
+                "name": "브엘따",
+                "Detail": "카밀로가 전방을 베어 가르며 30/60/90/120/150(+공격력의 100%)의 기본공격 피해를 입힙니다. \n외곽 범위에서 적중 시 6초 동안 1회 중첩이 되며 카밀로의 이동속도가 2초간 3/6/9/12/15%증가합니다.\n 2회 중첩 시 원형으로 2회 회전하며 주변에 30/60/90/120/150(+공격력의 100%), 40/80/120/160/200(+공격력의 125%)의 기본 공격 피해를 입히며 주변의 적을 카밀로 쪽으로 끌어당기고, 카밀로의 체력을 40/80/120/160/200(+공격력의 50%)회복시킵니다.\n브엘따는 카밀로의 기본 공격속도를 제외한 공격속도에 비례해 쿨다운이 최대 3.5초 감소합니다.\n알 꼼빠스의 첫 번째 돌진 도중, 이 스킬을 사용하면 원형으로 피해를 입히고 외곽 범위 적중 시 효과가 적용됩니다."
+            },
+            "W": {
+                "name": "씨에레",
+                "Detail": "카밀로가 회전하며 앞으로 돌진하여 10/20/30/40/50(+공격력의 35%)의 기본공격 피해를 최대 4회 입힙니다."
+            },
+            "E": {
+                "name": "알 꼼빠스",
+                "Detail": "카밀로가 지정한 대상에게 빠르게 돌진하며 30/45/60/75/90(+ 공격력의 20%)의 스킬 피해를 입히고 5초 동안 원스텝을 부여합니다.\n원스텝이 부여된 대상에게 스킬을 다시 사용하면 대상에게 빠르게 접근하여 30/45/60/75/90(+ 공격력의 20%)의 스킬 피해를 입히고, 대상을 밀어낸 후 거리를 벌리며  8/7/6/5/4초 동안 투스텝을 부여합니다.\n투스텝이 부여된 대상에게는 알 꼼빠스를 사용할 수 없습니다."
+            },
+            "R": {
+                "name": "두엔데",
+                "Detail": "카밀로가 춤을 추며 앞으로 이동 후 0.23초 뒤 다시 돌아오며 이동하는 동안 부딪힌 적 대상에게 엠블레쏘를 최대 2중첩까지 부여합니다.\n다시 돌아왔을 때 적에게 부여된 엠블레쏘의 중첩에 따라 100/150/200(+ 공격력의 50%) ~ 200/300/400(+ 공격력의 100%) 의 스킬 피해를 입히고, 이동속도가 0.85초 동안 80%증가합니다.\n피해를 입힐 때 엠블레쏘가 2중첩인 대상을 1.5초 동안 기절시키고, 카밀로의 체력을 100/150/200 회복시키며 회복량은 부여된 전체 엠블레쏘의 수에 비례해 (최대 5중첩) 20/35/50%증가합니다.\n 10초 안에 최대 두 번까지 재사용할 수 있고, 그 이후에 쿨다운이 적용됩니다.\n카밀로가 춤을 추며 이동하는 동안에는 저지 불가 상태가 되며 받는 피해량이 20/25/30%감소합니다."
             }
         },
 
