신캐 클로에 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -228,7 +228,8 @@
         "이바": "エヴァ",
         "다니엘": "ダニエル",
         "제니": "ジェニー",
-        "카밀로": "カミロ"
+        "카밀로": "カミロ",
+        "클로에": "クロエ"
     },
     "weapons": {
         "투척": "投げ", 
@@ -728,7 +729,10 @@
         "아이테르깃털": "アイテールの羽",
         "조잡한쌍검": "粗末な双剣",
         "아수라": "阿修羅",
-        "다이아뎀": "ダイアデム"
+        "다이아뎀": "ダイアデム",
+        "프로스트팽": "Permafrost",
+        "에스프리": "エスプリ",
+        "버건디47": "バーガンディー 47"
 
     },
     "skill": {
@@ -1584,6 +1588,28 @@
             "R": {
                 "name": "ドゥエンデ",
                 "Detail": "カミロが踊りながら前方に移動した後、0.23 後戻ってきて移動中にぶつかった対象にエンべレソを最大2スタックを付与します。\n戻ってきた時、対象に付与されたエンべレソのスタックによって100/150/200(+ 攻撃力の 50%) ~ 200/300/400(+ 攻撃力の 100%)のスキルダメージを与え、移動速度が  0.85秒間80%増加します。\nダメージを与えるとエンべレソ2スタックの対象を1.5秒間気絶させ、カミロの体力は 100/150/200回復して回復量は与えられた全体のエンべレソの数に比例して(最大5スタック)20/35/50%増加します。\n10秒以内に最大2回まで再使用後のクールダウンが適用されます。\nカミロが踊りながら移動している間は阻止不可状態となり、受けるダメージ量が20/25/30%減少します。"
+            }
+        },
+        "클로에": {
+            "T": {
+                "name": "マリオネット",
+                "Detail": "クロエは人形ニナで敵を攻撃させることができます。ニナはクロエが3回以上基本攻撃した対象に突き攻撃で25/50/75のスキルダメージを追加で与えます。ニナは体力が0になると、消滅状態になってしばらく後に復活します。\n[Alt]+[右クリック]でニナをコントロールできます。クロエを指定すると他の場所を指定するまでニナはクロエについて行きます。また、クロエとの距離が離れると、クロエの近くにまた瞬間移動します。\n消滅したニナは24/22/20秒後にクロエ現在体力の 50%を消耗し、ニナ最大体力の 80%で復活します。\nニナはパッシブレベルが上がるたびに追加能力値を獲得して、クロエ攻撃力、防御力、体力、致命打確率、スキル攻撃追加ダメージ、スキル増幅の 66%(2/3)がニナに追加適用されます。"
+            },
+            "Q": {
+                "name": "攻撃命令",
+                "Detail": "クロエガニナに攻撃命令を指示すると、ニナは周りの敵を刃の足で斬りつけ90/100/110/120/130(+攻撃力の 60%)のスキルダメージを与え、敵の移動速度を2秒間20/25/30/35/40% 減少させます。"
+            },
+            "W": {
+                "name": "人形劇",
+                "Detail": "クロエが刃の刺繍を編んだ縫糸をくるくる回して近接した敵に毎秒 30/36/42/48/54の固定ダメージを与え、範囲内にいる敵の移動速度を50%減少させます。縫糸を回す間、クロエは攻撃命令(Q)とキルトリッパー(E)スキルを使用できます。\n3秒以内にスキルをもう一度使用でき、指定した位置に刃の刺繍を挿し込んで80/90/100/110/120(+攻撃力の 30%)のダメージを与え、1.5秒間敵の移動スキルを制限します。この時ニナは刃の刺繍の位置に瞬間移動して、刃の足で鋭く振り下ろして、120/135/150/165/180(+攻撃力の 30%)のダメージを与え、敵を0.5秒間空中に浮かせます。ニナの攻撃以降、刃の刺繍はクロエの方に弾かれ、再び拾うと2秒間クロエの移動速度が 30% 増加します。"
+            },
+            "E": {
+                "name": "キルトリッパー",
+                "Detail": "スキルを使用すると、指定した方向にクロエが素早く移動して経路上の敵に 60/70/80/90/100(+攻撃力の 30%)のスキルダメージを与えます。\n1秒後、スキルをもう一度使用するとニナがクロエの位置に向かって飛び、突き攻撃で経路上の敵に100/110/120/130/140(+攻撃力の 45%)のスキルダメージを与え、ニナが敵を的中させた場合は攻撃命令(Q)スキルのクールダウンが初期化されます。"
+            },
+            "R": {
+                "name": "生命共有",
+                "Detail": "クロエとニナの深い愛情により、7秒間お互いを強くつなげて'リンク'状態になります。リンク状態になると、すべてのデバフ効果が削除され、ニナの攻撃速度と移動速度がそれぞれ20/25/30%増加する同時に人形劇(W)とキルトリッパー(E)スキルの残っているクールダウン時間が 30%減少します。また、連結ラインに敵が当たると毎秒75/105/135の固定ダメージ(敵がラインに止まるほどより大きいダメージ)を与えます。\nリンク状態時、クロエとニナかどちらか一方がダメージを受ける場合、攻撃体は総ダメージ量70%のダメージを受け、連結された他の攻撃体は65/60/55%のダメージを受けます。\nリンクされた状態ではクロエとニナは片方が先に死ぬことはできず、片方でも生きていると死亡に至るほどのダメージ量を受けても死なず、二人の体力が全部消尽すると死亡します。"
             }
         },
 
