--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -227,7 +227,8 @@
         "이바": "이바",
         "다니엘": "다니엘",
         "제니": "제니",
-        "카밀로": "카밀로"
+        "카밀로": "카밀로",
+        "클로에": "클로에"
     },
     "weapons": {
         "투척": "투척", 
@@ -725,7 +726,10 @@
         "아이테르깃털": "아이테르깃털",
         "조잡한쌍검": "조잡한쌍검",
         "아수라": "아수라",
-        "다이아뎀": "다이아뎀"
+        "다이아뎀": "다이아뎀",
+        "프로스트팽": "프로스트팽",
+        "에스프리": "에스프리",
+        "버건디47": "버건디47"
     },
     "skill": {
         "아야": {
@@ -1584,6 +1588,28 @@
             "R": {
                 "name": "두엔데",
                 "Detail": "카밀로가 춤을 추며 앞으로 이동 후 0.23초 뒤 다시 돌아오며 이동하는 동안 부딪힌 적 대상에게 엠블레쏘를 최대 2중첩까지 부여합니다.\n다시 돌아왔을 때 적에게 부여된 엠블레쏘의 중첩에 따라 100/150/200(+ 공격력의 50%) ~ 200/300/400(+ 공격력의 100%) 의 스킬 피해를 입히고, 이동속도가 0.85초 동안 80%증가합니다.\n피해를 입힐 때 엠블레쏘가 2중첩인 대상을 1.5초 동안 기절시키고, 카밀로의 체력을 100/150/200 회복시키며 회복량은 부여된 전체 엠블레쏘의 수에 비례해 (최대 5중첩) 20/35/50%증가합니다.\n 10초 안에 최대 두 번까지 재사용할 수 있고, 그 이후에 쿨다운이 적용됩니다.\n카밀로가 춤을 추며 이동하는 동안에는 저지 불가 상태가 되며 받는 피해량이 20/25/30%감소합니다."
+            }
+        },
+        "클로에": {
+            "T": {
+                "name": "살아있는 마리오네트",
+                "Detail": "클로에는 인형 니나와 함께 다닙니다. 니나는 클로에가 2회 이상 기본 공격한 대상에게 찌르기를 통하여 25/50/75의 스킬 피해를 추가로 입힙니다. 니나는 체력이 0이 되면, 소멸 상태가 되었다가 잠시 후에 다시 부활합니다.\n[Alt] + [우클릭]으로 적이나 지점을 선택해 니나를 컨트롤 할 수 있으며, 클로에를 지정하면 다른 곳을 지정할 때까지 니나는 클로에를 따라다닙니다. 또한 클로에와 거리가 멀어지면 클로에 근처로 다시 순간이동 합니다.\n소멸된 니나는 24/22/20초 후에 클로에 현재 체력의 50%를 소모하여, 니나 최대 체력의 80%로 부활합니다.\n니나는 패시브 레벨이 오를 때 마다 추가 능력치를 얻게 되고, 클로에 공격력, 방어력, 체력, 치명타 확률, 스킬 공격 추가 피해, 스킬 증폭의 66%(2/3)가 각각 니나에게 추가로 적용됩니다."
+            },
+            "Q": {
+                "name": "공격 명령",
+                "Detail": "클로에가 니나에게 명령을 내리면 니나는 주변의 적을 칼날 다리로 베어, 90/100/110/120/130(+공격력의  60%)의 스킬 피해를 입히고, 적의 이동 속도를 2초 동안 20/25/30/35/40% 느려지게 만듭니다."
+            },
+            "W": {
+                "name": "인형극",
+                "Detail": "클로에가 칼날 자수를 엮은 재봉실을 빙글빙글 돌려 근접한 적에게 초당 30/36/42/48/54의 고정 피해를 입히고, 범위 안의 있는 적의 이동 속도를 50% 감소시킵니다. 재봉실을 돌리는 동안 클로에는 공격 명령(Q)과 퀼트 리퍼(E) 스킬을 사용할 수 있습니다.\n3초 이내에 스킬을 한 번 더 사용 시, 지정한 위치로 칼날 자수를 내리꽂아 80/90/100/110/120(+공격력의 30%)의 피해를 입히고, 1.5초간 적에게 고정 상태 이상을 부여합니다. 이때 니나는 칼날 자수의 위치로 순간이동 하여, 칼날 다리로 날카롭게 내리찍어 120/135/150/165/180(+공격력의 30%)의 피해를 입히고 적을 0.5초 동안 공중에 띄웁니다. 니나의 공격 이후, 칼날 자수는 클로에 쪽으로 튕겨지며, 다시 주우면 2초 동안 클로에의 이동 속도가 30% 증가합니다."
+            },
+            "E": {
+                "name": "퀼트 리퍼",
+                "Detail": "스킬을 사용하면 지정한 방향으로 클로에가 빠르게 이동하며 경로상의 적에게 60/70/80/90/100(+공격력의 30%)의 스킬 피해를 입힙니다.\n1초 이후 스킬을 한 번 더 사용하면 니나가 클로에의 위치를 향해 날아가며, 찌르기를 통해 경로상의 적에게 100/110/120/130/140(+공격력의 45%)의 스킬 피해를 입히고, 니나가 적을 적중시켰다면 공격 명령(Q)의 쿨다운이 초기화됩니다."
+            },
+            "R": {
+                "name": "생명 공유",
+                "Detail": "로에와 니나의 지독한 애정으로 인해 7초간 서로를 강력하게 연결하여 ‘링크’ 상태가 됩니다. 링크 상태가 될 때, 모든 해로운 상태 이상이 제거되며, 니나의 공격 속도와 이동 속도가 각각 20/25/30%가 증가함과 동시에 인형극(W)과 퀼트 리퍼(E) 스킬의 남아있는 쿨다운 시간이 30% 줄어듭니다. 또한 연결 라인에 적이 닿을 때 초당 75/105/135의 고정 피해 (적이 라인에 머무를수록 더 큰 피해)를 입힙니다.\n링크 상태일 때는 클로에와 니나 둘 중에 어떤 한쪽이 피해를 입는 경우 피격체는 총 피해량의 70%의 피해를 입고, 연결된 다른 피격체는  65/60/55%의 피해를 입습니다.\n링크된 상태에서는 클로에와 니나는 한쪽이 먼저 죽을 수 없으며, 어느 한쪽이라도 살아 있다면 사망에 이르게 하는 피해량을 받아도 죽지 않으며, 피격체와 링크피격체의 체력이 모두 소진되어야 사망합니다."
             }
         },
 
